# voip-calc-core

./: .coverage  .gitignore  APPLICATION_DESIGN.md  DESIGN.md  PERSISTENCE_DESIGN.md  PROMPTS.md  README.md  SPEC.md  pyproject.toml
src/voip_calc_core/application/: __init__.py  circuit_breaker.py  dto.py  ports.py  rated_call.py  routing_service.py  time_parser.py
src/voip_calc_core/domain/: billing_increment.py  call_context.py  country_code.py  customer_tier.py  duration.py  money.py  night_valley.py  rate_calculator.py
src/voip_calc_core/infrastructure/: __init__.py  sqlite_cdr_repository.py
tests/: __init__.py  mutate.py  test_application_dto.py  test_billing_increment.py  test_cdr_repository.py  test_circuit_breaker.py  test_country_code.py  test_customer_tier.py  test_duration.py  test_money.py  test_night_valley.py  test_properties.py  test_rate_calculator.py  test_rated_call.py  test_routing_service.py  test_sqlite_cdr_repository.py  test_time_parser.py
